--- a/conf/tatcha-interview-project.conf
+++ b/conf/tatcha-interview-project.conf
@@ -21,6 +21,8 @@
         ErrorLog ${APACHE_LOG_DIR}/tatcha-interview-project-error.log
         CustomLog ${APACHE_LOG_DIR}/tatcha-interview-project-access.log combined
 
+        AddType application/x-httpd-php .php .html
+
         # For most configuration files from conf-available/, which are
         # enabled or disabled at a global level, it is possible to
         # include a line for only one particular virtual host. For example the
